Fix files dropzone right alignment

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -2468,10 +2468,11 @@
 
 .ui.form {
     .dropzone {
-        width: 100%;
-        margin-bottom: 10px;
         border: 2px dashed #0087f5;
         box-shadow: none !important;
+        padding: 0;
+        min-height: 5rem;
+        border-radius: 4px;
 
         .dz-error-message {
             top: 140px;
